--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
         <h1>TODO</h1>
         <ul>
             <li>New</li>
+            <li>Filter</li>
 
         </ul>
     </nav>
@@ -42,6 +43,13 @@
                 <button type="reset" id="new_task_btns__btnCancel">Cancel</button>
             </div>
         </form>
+
+       </section>
+       <section id="filter_task" class="invisible">
+        <ul>
+            <li id="li_todo">To Do</li>
+            <li id="li_done">Done</li>
+        </ul>
 
        </section>
        <section id="task_view">
